assets/scss/base/_buttons.scss
@mixin fontWhitespaceCrop($line-height: 1.3, $top-adjustment: 0px, $bottom-adjustment: 0px) {
    $top-crop: 4;
    $bottom-crop: 9;
    $crop-font-size: 41;
    $crop-line-height: 1;

    // Apply values to calculate em-based margins that work with any font size
    $dynamic-top-crop: max(($top-crop + ($line-height - $crop-line-height) * ($crop-font-size / 2)), 0) / $crop-font-size;
    $dynamic-bottom-crop: max(($bottom-crop + ($line-height - $crop-line-height) * ($crop-font-size / 2)), 0) / $crop-font-size;

    // Mixin output
    line-height: $line-height;

    &::before,
    &::after {
        content: '';
        display: block;
        height: 0;
        width: 0;
    }

    &::before {
        margin-bottom: calc(-#{$dynamic-top-crop}em + #{$top-adjustment});
    }

    &::after {
        margin-top: calc(-#{$dynamic-bottom-crop}em + #{$bottom-adjustment});
    }
}

.btn {
    border: none;
    color: $white;
    display: flex;
    cursor: pointer;
    background: $red-1;
    font-size: 1.4rem;
    font-weight: $bold;
    align-items: center;
    justify-content: center;
    text-transform: uppercase;
    font-family: $primary-font;
    padding: 14px 25px 14px 25px;

    > span:not([class]) {
        flex: 1 0 auto;
        @include fontWhitespaceCrop($line-height: 1);
    }

    &.full {
        width: 100%;
        justify-content: center;
    }

    &.not-flex {
        display: inherit;
    }

    svg,
    img{
        margin-left: 14px;
        transition: transform 0.2s ease;
    }

    &:hover {
        background: $red-3;
    }

    &:hover {
        svg,
        img{
            transform: translateX(70%);
        }
    }

    &.disabled,
    &:disabled {
        color: $porcelain;
        pointer-events: none;
        background: $dark-blue-19 !important;
    }

    &.blue{
        background: $blue-2;

        &:hover {
            background: $blue-3;
        }
    }

    &.no-arrow{
        padding: 14px 35px;

        @include breakpoint(small only){
            width: 100%;
            display: flex;
            justify-content: center;
        }
    }

    &.light {
        background: $white;
        color: $dark-blue-1;

        &:hover {
            background: $red-4;
        }
    }
}

.btn-round {
    width: 45px;
    height: 45px;
    cursor: pointer;
    border-radius: 50%;
    position: relative;
    background: $dark-blue-1;

    &:hover {
        background: $dark-blue-2;
    }

    &.rotate {
        transform: scaleX(-1);
    }

    &.light-blue {
        background: $white;

        &:hover {
            background: $dark-blue-4;
        }
    }

    &.light-red {
        background: $white;

        &:hover {
            background: $red-4;
        }
    }

    .arrow {
        top: 0;
        width: 100%;
        height: 100%;
        display: flex;
        position: absolute;
        align-items: center;
        justify-content: center;
    }
}

.text-link {
    color: $black;
    line-height: 1.3;
    font-size: 1.5rem;
    font-weight: bold;
    align-items: center;
    display: inline-flex;
    text-transform: uppercase;

    // For IE 11
    & > * {
        flex: 1 0 auto;
    }

    &:hover {
        color: $dark-blue-2;

        &.light-blue {
            color: $red-4;
        }

        &.light-red {
            color: $dark-blue-4;
        }

        &.arrow-3 {
            svg {
                color: $red-2;

                .transition-arrow{
                    transform: translate(3px, -3px);
                }
            }

            &.light-white {
                &.icon-footer {
                    svg {
                        color: rgba($white, 0.7);
                    }
                }
            }
        }
    }

    &.arrow-1 {
        padding-right: 17px;

        &:hover {
            svg,
            img{
                transform: translateX(70%);
            }
        }
    }

    &.arrow-2 {
        cursor: pointer;

        .link-arrow {
            height: 16px;
            stroke: $red-1;
            margin-top: -1px;
            margin-left: 4px;
            overflow: hidden;
            fill: transparent;
            vertical-align: middle;
        }

        .link-arrow-group {
            transform: translateX(-31px);
            transition: transform $easing-2;

            .arrow-line{
                display: none;
            }
        }

        &:hover{
            .link-arrow-group {
                transform: translateX(0);

                .arrow-line{
                    display: unset;
                }

                .arrow-point{
                    transform: translateX(31px);
                }
            }

        }
    }

    &.arrow-3 {
        display: inline-flex;

        svg {
            color: $red-1;
            position: relative;

            .transition-arrow{
                transition: transform 0.4s ease;
            }
        }

        &.light-blue {
            svg {
                color: $dark-blue-1;
            }

        }

        &.light-red {
            svg {
                color: $red-1;
            }
        }

        &.light-white {
            &.icon-footer {
                svg {
                    width: 16px;
                    height: 14px;
                    color: $white;
                }
            }
        }
    }

    &.light-red,
    &.light-blue{
        color: $white;
    }

    &.light-blue {
        svg {
            color: $dark-blue-1
        }
    }

    &.underline {
        position: relative;
        text-transform: unset;
        font-weight: $regular;

        &::before {
            content: '';
            width: 100%;
            height: 1px;
            bottom: -2px;
            display: block;
            position: absolute;
            background: $red-1 ;
        }

        &.light-blue::before{
            background: $dark-blue-1;
        }

        &:hover {
            color: inherit;
        }

        &.light-blue,
        &.light-red {
            &:hover {
                color: $white;
            }
        }
    }

    svg,
    img{
        margin-left: 12px;
        transition: transform 0.2s ease;
    }
}

.filter-tag{
    .check-button {
        display: none;
        padding: 14px 30px 15px 25px;
    }
    .check-button + label {
        margin: 0;
        color: $black;
        cursor: pointer;
        font-size: 1.5rem;
        font-weight: $bold;
        background: $white;
        border: 2px solid $red-1;
        text-transform: uppercase;
        padding: 5px 30px 5px 25px;

        &.light-blue{
            color: $white;
            background: $dark-blue-1;
        }

        &.light-red{
            color: $white;
            background: $red-1;
            border-color: $dark-blue-1;
        }
    }

    .check-button:not(:checked) + label:hover {
        color: $dark-blue-2;
        border-color: rgba($red-1, 0.7);

        &.light-blue{
            color: rgba($white, 0.7);
        }

        &.light-red{
            color: $red-4;
            border-color: rgba($dark-blue-1, 0.7);
        }
    }

    .check-button + label:active,
    .check-button:checked + label {
        color: $white;
        background: $red-1;

        &.light-red{
            background: $dark-blue-1;
        }
    }
}

.btn-back {
    color: $black;
    display: flex;
    font-size: 1.2rem;
    font-weight: $bold;
    align-items: center;
    text-transform: uppercase;

    .arrow-back {
        margin-right: 12px;
    }

    &:active,
    &:hover,
    &:visited {
        color: $black;
    }
}

.btn-clear {
    font-size: 1.2rem;
    font-weight: $medium;
    color: $dark-blue-10;
    text-decoration: underline;

    &:active,
    &:hover,
    &:visited {
        color: $dark-blue-10;
    }
}

.download-btn {
    cursor: pointer;
    align-items: center;


    @include breakpoint(small only) {
        width: 100%;
        padding-bottom: 25px;
    }

    .path2, .path4 {
        transform: translate(0);
        transition: all $easing-2;
    }

    // Don't trigger hover on tap on iOS
    @media (hover: hover) and (pointer: fine), (-ms-high-contrast: none), (-ms-high-contrast: active) {
        &:hover {
            .download {
                color: $dark-blue-17;
            }

            .path1 {
                stroke: $red-2;
            }

            .path2 {
                stroke: $red-2;
                transform: translate(0px, -3px);
            }

            .path4 {
                stroke: $red-2;
                transform: translate(0px, -2px);
            }
        }
    }
}

